[package]
name = "notice_mohist_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
discord-message = "0.1.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
url = { version = "2.2.2", features = ["serde"] }
